<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF3E0"
    android:orientation="horizontal">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/cat_textfield_standard_spacing"
            android:orientation="vertical">

            <TableLayout
                android:id="@+id/notice1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/Contact"
                        android:layout_width="107dp"
                        android:layout_height="51dp"
                        android:layout_alignTop="@+id/notice"
                        android:layout_alignEnd="@+id/notice"
                        android:layout_alignRight="@+id/notice"
                        android:layout_alignBottom="@+id/notice"
                        android:layout_marginTop="9dp"
                        android:layout_marginEnd="4dp"
                        android:layout_marginRight="4dp"
                        android:layout_marginBottom="18dp"
                        android:text="Button" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/notice"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginLeft="4dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginRight="4dp"
                        android:layout_marginBottom="4dp"
                        android:hint="@string/cat_textfield_label"
                        app:helperText="Masukan Nomor Handphone Anda"
                        app:helperTextEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/NoTujuan"
                            android:layout_width="257dp"
                            android:layout_height="wrap_content"
                            android:background="@color/yello"
                            android:inputType="phone" />

                    </com.google.android.material.textfield.TextInputLayout>

                </RelativeLayout>

            </TableLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/notice2"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:hint="@string/cat_textfield_password"
                app:errorEnabled="true"
                app:helperText="@string/cat_textfield_filled_dense_password_helper_text"
                app:helperTextEnabled="true"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/NoKunci"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/notice3"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:hint="@string/cat_textfield_label_pesan"
                app:helperText="@string/cat_textfield_filled_helper_text"
                app:helperTextEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/TulisPesan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/notice4"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                app:helperText="@string/hasil_Enkripsi"
                app:helperTextEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/HasilEnkripsi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:gravity="center"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/Enkripsi"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="10dp"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:background="@drawable/cerclebackgroundpurple"
                            android:padding="10dp"
                            android:src="@drawable/btn_enkrip" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="Kunci Pesan"
                            android:textStyle="bold" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/KirimPesan"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="10dp"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:background="@drawable/cerclebackgroundpurple"
                            android:padding="10dp"
                            android:src="@drawable/btn_kirim" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="Kirim Pesan"
                            android:textStyle="bold" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>